--- a/app/src/main/res/layout/content_equipamentos.xml
+++ b/app/src/main/res/layout/content_equipamentos.xml
@@ -2,9 +2,10 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ScrollView01"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:scrollbars="vertical">
+    android:scrollbars="vertical"
+    android:padding="20dp">
 
     <include layout="@layout/bloco_identificacao_cras" />
 </ScrollView>
